# ynab-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
src/adapters/: cache.rs  mod.rs  response_mapper.rs  ynab_client.rs
src/domain/: account.rs  budget.rs  category.rs  category_group.rs  date_range.rs  error.rs  mod.rs  money.rs  payee.rs  transaction.rs  transaction_query.rs  transaction_service.rs
src/server/: handler.rs  jsonrpc.rs  mcp_protocol.rs  mod.rs  transport.rs
tests/: integration_test.rs  main_test.rs
