[package]
name = "ynab-mcp"
version = "0.1.0"
edition = "2024"
authors = ["YNAB MCP Server Contributors"]
description = "MCP server for read-only YNAB budget data access"
license = "MIT"

[dependencies]
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0"

[dev-dependencies]
# Testing framework
# (Additional dev dependencies will be added when tests require them following TDD)
